 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    
     tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="45sp"
        android:layout_marginBottom="25dip"
        android:typeface="serif" />
    <Button
        android:id="@+id/przycisk_test"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
    android:layout_marginRight="50dip"
        android:text="@string/etykieta_test" />
    <Button
        android:id="@+id/przycisk_opis"
        android:layout_width="fill_parent"
        android:layout_marginLeft="50dip"
    android:layout_marginRight="50dip"
        android:layout_height="wrap_content"
        
        android:text="@string/etykieta_opis" />
    <Button
        android:id="@+id/przycisk_autor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
    android:layout_marginRight="50dip"
        android:text="@string/etykieta_autor" />
    <Button
        android:id="@+id/przycisk_wyjscie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
    android:layout_marginRight="50dip"
        android:text="@string/etykieta_wyjscie" />
    
    

</LinearLayout>